# deepagents

./: .env.example  .gitignore  IMPLEMENTATION_COMPLETE.md  README.md  pyproject.toml  requirements.txt  run_research.py
docs/: IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_CHANGES.md  QUICK_START.md  SOLUTION_DESIGN.md  architecture_flowchart.html
src/: main.py
src/agents/: graph.py
src/agents/edges/: routing.py
src/agents/nodes/: analyze.py  connect.py  generate_queries.py  initialize.py  synthesize.py  web_search.py
src/config/: settings.py
src/models/: __init__.py  search_result.py  state.py
src/observability/: audit_logger.py  detailed_logger.py
src/prompts/: __init__.py  analysis.py  query_generation.py  synthesis.py  web_search.py
src/services/llm/: claude_service.py  openai_service.py
src/services/search/: query_generator.py  web_search.py
src/utils/: helpers.py  research_utils.py
tests/: test_openai_agents.py
tests/evaluation/: EVALUATION_GUIDE.md  evaluation_comparator.py  test_persona_recall.py
tests/evaluation/personas/: elon_musk.json  isabel_dos_santos.json  sam_bankman_fried.json
